@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-SUBDIRS = Model t View
+SUBDIRS = Model t Types View
 
 perldir = @PERLPATH@/EBox
 
