@@ -1,0 +1,11 @@
+## Process this file with automake to produce Makefile.in
+
+perldir = @PERLPATH@/EBox/DNS/Types
+
+nobase_perl_DATA = Hostname.pm
+
+DISTCLEANFILES =
+
+EXTRA_DIST = $(nobase_perl_DATA)
+
+MAINTAINERCLEANFILES = Makefile.in
